--- a/src/main/resources/templates/order/order-management-form.html
+++ b/src/main/resources/templates/order/order-management-form.html
@@ -9,46 +9,63 @@
 <div class="content-area">
     <h2>주문관리</h2>
     <hr>
+    <!--    <div>-->
+    <!--        <span style="float: left; width : 50%;"></span>-->
+    <!--    </div>-->
     <div>
-        <span style="float: left; width : 50%;"></span>
-
-    </div>
-    <div>
-        <div class="input-group">
-            <select name="vendorId" style="width:15%;" class="form-select" id="" aria-label="Example select with button addon">
-                <option selected>거래선*</option>
-                <option th:each="vendor : ${vendorList}" th:value="${vendor.id}" th:text="${vendor.vendorName}"></option>
+        <div class="input-group" style="width : 60%; float: left;">
+            <select style="width : 25%;"
+                    name="vendorId" class="form-select" id=""
+                    aria-label="Example select with button addon">
+                <option value="0" selected>거래선*</option>
+                <option th:each="vendor : ${vendorList}" th:value="${vendor.id}"
+                        th:text="${vendor.vendorName}"></option>
             </select>
-            <select name="searchCriteria" style="width:15%;" class="form-select" id="inputGroupSelect04" aria-label="Example select with button addon">
+            <select style="width : 25%;"
+                    name="searchCriteria" class="form-select" id="inputGroupSelect04"
+                    aria-label="Example select with button addon">
                 <option selected value="1">주문번호</option>
                 <option value="2">판매번호</option>
                 <option value="3">납품번호</option>
             </select>
-            <input name="searchContent" style="width:70%;" class="form-control" type="text" value="">
+            <input style="width : 50%;"
+                   name="searchContent" class="form-control" type="text" value="">
         </div>
-        <div style="margin-top : 20px;">
-            <div class="input-group" style="width : 30%; float: left; margin-right: 3%;">
-                <span class="input-group-text">주문생성일*</span>
-                <input name="orderCreateStartDt" max="9999-12-31" type="date" class="form-control">
-                <input name="orderCreateEndDt" max="9999-12-31" type="date" class="form-control">
-            </div>
-            <div class="input-group" style="width : 20%; float: left; margin-right: 3%;">
-                <span class="input-group-text">주문상태</span>
-                <select name="orderState" class="form-select" style="float:left;width:10%;">
-                    <option selected>전체</option>
-                    <option>생성</option>
-                    <option>미생성</option>
-                </select>
-            </div>
-            <div class="input-group" style="width : 30%; float: left; margin-right: 3%;">
-                <span class="input-group-text">모델코드</span>
-                <input name="modelCord" type="text" class="form-control">
-            </div>
-            <button onclick="searchOrder()" style="width : 10%;" class="btn btn-primary">검색</button>
+        <div class="input-group" style="width : 35%; float: left; left: 5%;">
+            <span class="input-group-text">주문생성일*</span>
+            <input name="orderCreateStartDt" max="9999-12-31" type="date" class="form-control">
+            <input name="orderCreateEndDt" max="9999-12-31" type="date" class="form-control">
+            <script>
+                $('input[type="date"]')[0].valueAsDate = new Date();
+                $('input[type="date"]')[1].valueAsDate = new Date();
+            </script>
         </div>
-<!--        <input class="form-control" type="text">-->
     </div>
-    <div style="margin-top : 30px;">
+    <div style="height : 30px;"></div>
+    <div style="margin-top : 20px;">
+        <div class="input-group" style="width : 25%; margin-right: 4%; float: left;">
+            <span class="input-group-text">주문상태</span>
+            <select name="orderState" class="form-select">
+                <option value="1" selected>전체</option>
+                <option value="2">생성</option>
+                <option value="3">미생성</option>
+            </select>
+        </div>
+        <div class="input-group" style="width : 25%; margin-right: 4%; float: left;">
+            <span class="input-group-text">모델코드</span>
+            <input name="modelCord" type="text" class="form-control">
+        </div>
+        <div class="input-group" style="width : 25%; margin-right: 4%; float: left;">
+            <span class="input-group-text">고객명</span>
+            <input name="customerName" type="text" class="form-control">
+        </div>
+        <button style="width : 13%;" onclick="searchOrder()" class="btn btn-primary">검색</button>
+    </div>
+    <div style="margin-top : 50px;">
+        <div style="text-align: right;">
+            <input type="button" class="btn btn-primary" value="주문생성"/>
+            <input type="button" class="btn btn-secondary" value="주문삭제"/>
+        </div>
         <table class="table">
             <thead>
             <tr>
@@ -58,6 +75,10 @@
                 <th>판매번호</th>
                 <th>상품코드</th>
                 <th>모델코드</th>
+                <th>수량</th>
+                <th>공급가</th>
+                <th>고객명</th>
+                <th>연락처</th>
                 <th>TC</th>
                 <th>주문생성일</th>
                 <th>요구납기일</th>
@@ -75,14 +96,15 @@
 </body>
 <script>
 
-    const searchOrder=()=>{
-        let vendorId = $('select[name="vendorId"]').val();
-        let searchCriteria = $('select[name="searchCriteria"]').val();
-        let searchContent = $('input[name="searchContent"]').val();
-        let orderCreateStartDt = $('input[name="orderCreateStartDt"]').val();
-        let orderCreateEndDt = $('input[name="orderCreateEndDt"]').val();
-        let orderState = $('input[name="orderState"]').val();
-        let modelCord = $('input[name="modelCord"]').val();
+    const searchOrder = () => {
+        let vendorId            = $('select[name="vendorId"]').val();
+        let searchCriteria      = $('select[name="searchCriteria"]').val();
+        let searchContent       = $('input[name="searchContent"]').val();
+        let orderCreateStartDt  = $('input[name="orderCreateStartDt"]').val();
+        let orderCreateEndDt    = $('input[name="orderCreateEndDt"]').val();
+        let orderState          = $('select[name="orderState"]').val();
+        let modelCord           = $('input[name="modelCord"]').val();
+        let customerName        = $('input[name="customerName"]').val();
         const params = {
             vendorId            : vendorId,
             searchCriteria      : searchCriteria,
@@ -90,36 +112,65 @@
             orderCreateStartDt  : orderCreateStartDt,
             orderCreateEndDt    : orderCreateEndDt,
             orderState          : orderState,
-            modelCord           : modelCord
+            modelCord           : modelCord,
+            customerName        : customerName
+        }
+        if (vendorId === '0') {
+            alert('거래선을 선택하세요');
+            return;
         }
 
         $.ajax({
-            type : 'post',
-            url : '/api/order/list',
-            dataType : 'json',
-            contentType : 'application/json',
-            data : JSON.stringify(params),
-            success: (result)=>{
+            type: 'post',
+            url: '/api/order/list',
+            dataType: 'json',
+            contentType: 'application/json',
+            data: JSON.stringify(params),
+            success: (result) => {
                 console.log(result);
                 let txt = '';
-                result.result.forEach((item,idx)=>{
+                result.result.forEach((item, idx) => {
+                    let productCordList = item.productList;
+                    let productCordSize = productCordList.length;
+                    let modelCordTxt = '';
+                    let productCordTxt = '';
+                    let quantity = '';
+                    let price = '';
+                    productCordList.forEach((productCord, seq) => {
+                        modelCordTxt += `<div>${productCord.modelCord}</div>`;
+                        productCordTxt += `<div>${productCord.productCord}</div>`;
+                        quantity += `<div>${productCord.orderQuantity}</div>`;
+                        price += `<div>${productCord.supplyPrice}</div>`;
+                    })
+
                     txt += `<tr>`;
-                    txt += `<td>${item.statementId}</td>`;
-                    txt += `<td>${item.orderId}</td>`;
+                    txt += `<td><input type="checkbox"/></td>`
+                    txt += `<td><a href="/order/update?statementId=${item.statementId}" onclick="window.open(this.href , 'window_name' , 'width=430,height=500,location=no,status=no,scrollbars=yes'); return false;">${item.statementId}</a></td>`;
+                    txt += `<td>${item.orderId === null ? '미생성건' : item.orderId}</td>`;
                     txt += `<td>${item.salesNo}</td>`;
-                    txt += `<td>${item.salesNo}</td>`;
-                    txt += `<td>${item.salesNo}</td>`;
+                    txt += `<td>${productCordTxt}</td>`;
+                    txt += `<td>${modelCordTxt}</td>`;
+                    txt += `<td>${quantity}</td>`;
+                    txt += `<td>${price}</td>`;
+                    txt += `<td>${item.customerName}</td>`;
+                    txt += `<td>${item.customerPhoneNumber}</td>`;
+                    txt += `<td>TC영역</td>`;
+                    txt += `<td>${item.orderRegDt === null ? '' : item.orderRegDt}</td>`;
+                    txt += `<td>${item.deliveryReqDt}</td>`;
+                    txt += `<td>배송예정일영역</td>`;
+                    txt += `<td>납품번호영역</td>`;
+                    txt += `<td>${item.orderState === null ? '' : item.orderState}</td>`;
+                    txt += `</tr>`;
                 })
                 $('tbody').empty().append(txt);
             }
             ,
-            error : (err)=>console.log
+            error: (err) => console.log
         })
     }
 
 
 </script>
-
 
 
 </html>
