주문생성,전표수정 기능개발중

--- a/src/main/resources/templates/common/fragments/config-fragment.html
+++ b/src/main/resources/templates/common/fragments/config-fragment.html
@@ -17,5 +17,24 @@
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Title</title>
 </head>
+<script>
+    $(document).ready(function(){
+        // $('#all-check').click(function(){
+        //     if($(this).is(':checked')){
+        //         $('.form-check-input').attr('checked',true);
+        //     } else {
+        //         $('.form-check-input').attr('checked',false);
+        //     }
+        // });
+        //
+        // $('#all-check').change(function(){
+        //     if($(this).is(':checked')){
+        //         $('input:checkbox[name="checkbox"]').prop('checked',true);
+        //     } else {
+        //         $('input:checkbox[name="checkbox"]').prop('checked',false);
+        //     }
+        // })
+    })
 
+</script>
 </html>
