--- a/src/main/resources/templates/order/order-registration-update-form.html
+++ b/src/main/resources/templates/order/order-registration-update-form.html
@@ -3,65 +3,94 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head th:replace="common/fragments/config-fragment :: ConfigFragment">
+
 <body>
+<style>
+    body {
+        padding : 20px;
+    }
+</style>
 <!--<th:block th:replace="common/fragments/header-fragment" :: headerFragment></th:block>-->
 <div class="content-area">
     <h2>발주등록</h2>
     <hr>
     <form action="/productCord" method="post">
+        <input type="hidden" name="id" th:value="${statement.id}"/>
+        <input type="hidden" name="vendorId" th:value="${statement.vendorId}"/>
         <div style="padding-bottom: 5px;">
-            <select name="vendorId" id="vendor-select" class="form-select">
-                <option th:each="vendor : ${vendorList}"
-                        th:text="${vendor.vendorName}"
-                        th:value="${vendor.id}"
-                ></option>
+            <select id="vendor-select" class="form-select">ㅂ
+                <option th:value="${statement.vendorId}" th:text="${statement.vendorName}"></option>
             </select>
             <label for="vendor-select"></label>
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text" id="sales-no">판매번호</span>
-            <input type="text" name="salesNo" class="form-control" value="2500000000" aria-label="Sizing example input"
+            <input type="text" name="salesNo" class="form-control" th:value="${statement.salesNo}" aria-label="Sizing example input"
                    aria-describedby="inputGroup-sizing-default">
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text" id="delivery-req-dt">배송요청일</span>
-            <input type="date" name="deliveryReqDt" class="form-control" value="2023-05-31" aria-label="Sizing example input"
+            <input type="date" name="deliveryReqDt" class="form-control" th:value="${statement.deliveryReqDt}" aria-label="Sizing example input"
                    aria-describedby="inputGroup-sizing-default">
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text" id="customer-name">고객명</span>
-            <input type="text" name="customerName" class="form-control" value="이승규" aria-label="Sizing example input"
+            <input type="text" name="customerName" class="form-control" th:value="${statement.customerName}" aria-label="Sizing example input"
                    aria-describedby="inputGroup-sizing-default">
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text" id="customer-phone-number">연락처</span>
-            <input type="text" name="customerPhoneNumber" value="01079076010" class="form-control" aria-label="Sizing example input"
+            <input type="text" name="customerPhoneNumber" th:value="${statement.customerPhoneNumber}" class="form-control" aria-label="Sizing example input"
                    aria-describedby="inputGroup-sizing-default">
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text">주소</span>
-            <input type="text" name="customerAddressFirst" value="서울" aria-label="시/도" class="form-control" placeholder="시/도">
-            <input type="text" name="customerAddressSecond" value="영등포구" aria-label="군/구" class="form-control" placeholder="군/구">
-            <input type="text" name="customerAddressThird" value="여의대방로" aria-label="읍/면/동" class="form-control" placeholder="읍/면/동">
+            <input type="text" name="customerAddressFirst" th:value="${statement.customerAddressFirst}" aria-label="시/도" class="form-control" placeholder="시/도">
+            <input type="text" name="customerAddressSecond" th:value="${statement.customerAddressSecond}" aria-label="군/구" class="form-control" placeholder="군/구">
+            <input type="text" name="customerAddressThird" th:value="${statement.customerAddressThird}" aria-label="읍/면/동" class="form-control" placeholder="읍/면/동">
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text" id="customer-address-detail">상세주소</span>
-            <input type="text" name="customerAddressDetail" value="전철apt" class="form-control" aria-label="Sizing example input"
+            <input type="text" name="customerAddressDetail" th:value="${statement.customerAddressDetail}" class="form-control" aria-label="Sizing example input"
                    aria-describedby="inputGroup-sizing-default">
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text" id="remarks">비고사항</span>
-            <input type="text" name="remarks" class="form-control" value="빨리와주세요" aria-label="Sizing example input"
+            <input type="text" name="remarks" class="form-control" th:value="${statement.remarks}" aria-label="Sizing example input"
                    aria-describedby="inputGroup-sizing-default">
         </div>
     </form>
     <div style="padding-top: 20px; text-align: right;">
-        <input type="button" value="삭제">
+        <input onclick="deleteCord()" class="btn btn-secondary" type="button" value="삭제">
+        <script>
+            function deleteCord(){
+                $('.checkbox-input:checked').parent().parent().remove();
+                $('#all-check').prop('checked',false)
+            }
+        </script>
     </div>
     <table class="table">
         <thead>
         <tr>
-            <th><input class="form-check" type="checkbox"></th>
+            <th><input id="all-check" class="form-check-input" type="checkbox"></th>
+            <script>
+                $(document).ready(function () {
+                    $('#all-check').click(function(){
+                        if ($(this).is(':checked')) {
+                            $('.checkbox-input').attr('checked', true);
+                        } else {
+                            $('.checkbox-input').attr('checked', false);
+                        }
+                    });
+                    $('#all-check').change(function(){
+                        if ($(this).is(':checked')) {
+                            $('.checkbox-input').prop('checked', true);
+                        } else {
+                            $('.checkbox-input').prop('checked', false);
+                        }
+                    })
+                })
+            </script>
             <th>상품코드</th>
             <th>모델코드</th>
             <th>수량</th>
@@ -69,11 +98,18 @@
         </tr>
         </thead>
         <tbody>
+            <tr th:each="productCord : ${statement.productCordList}" class="productCord-info">
+                <td><input class="form-check-input checkbox-input" type="checkbox"/></td>
+                <td><input name="productCord" disabled class="form-control productCord" th:value="${productCord.productCord}" type="text"/></td>
+                <td><input name="modelCord" disabled class="form-control modelCord" type="text" th:value="${productCord.modelCord}"></td>
+                <td><input name="orderQuantity" class="form-control quantity" min="1" max="999" th:value="${productCord.orderQuantity}"></td>
+                <td th:text="${productCord.supplyPrice}"></td>
+            </tr>
         </tbody>
         <tfoot>
         <tr>
             <td></td>
-            <td><input type="text" id="productCordEnter"></td>
+            <td><input class="form-control" type="text" id="productCordEnter"></td>
             <td></td>
             <td></td>
             <td></td>
@@ -85,19 +121,8 @@
             if (event.keyCode != 13) {
                 return
             }
-            // console.log(event.value);
-            // console.log(this);
-            // console.log($(this));
-
-
             const productCord = $('#productCordEnter').val();
-            // console.log(productCord)
             const vendorId = $('#vendor-select').val();
-            // const params = JSON.stringify({
-            //     productCord : productCord,
-            //     vendorId : vendorId
-            // });
-            console.log(productCord, vendorId)
             $.ajax({
                 type: 'GET',
                 url: `/api/productModelInfo?productCord=${productCord}&vendorId=${vendorId}`,
@@ -111,7 +136,7 @@
                     let txt = '';
                     txt +=
                         `<tr class="productCord-info">
-                            <td><input class="form-check" type="checkbox"/></td>
+                            <td><input class="form-check-input checkbox-input" type="checkbox"/></td>
                             <td class="productCord">
 <!--                            <input name="productCordId" type="hidden" value="${result.result.productCordId}"/>-->
                             <input name="productCord" disabled class="form-control productCord" type="text" value="${result.result.productCord}">
@@ -130,16 +155,13 @@
             });
         });
         const changeQuantity = (e, supplyPrice) => {
-            console.log(e);
-            console.log(supplyPrice);
             const quantity = e.value;
-            console.log('quantity : ', quantity);
             $(e).parent('td').next('td').children('input')[0].value = e.value * supplyPrice;
 
         }
     </script>
     <div class="d-grid gap-2 d-md-block" style="text-align : right;">
-        <button class="btn btn-primary" type="button" onclick="createStatement()">전표생성</button>
+        <button class="btn btn-primary" type="button" onclick="createStatement()">전표수정</button>
         <button class="btn btn-secondary" type="button" onclick="createStatement('orderRegistration')">주문생성</button>
     </div>
     <script>
@@ -151,6 +173,10 @@
             }
             console.log(orderInfo);
             const productCords = $('.productCord-info');
+            if(productCords.length === 0){
+                alert('상품코드가 적어도 1개 이상 존재해야합니다.');
+                return;
+            }
             let orderProductCordArray = [];
             console.log(productCords)
             for (let i = 0; i < productCords.length; i++) {
@@ -164,11 +190,10 @@
                 }));
             }
             orderInfo['orderProductCordArray'] = orderProductCordArray;
-            // console.log(orderProductCordArray)
             console.log(JSON.stringify(orderInfo));
             $.ajax({
                 type : 'post',
-                url : '/api/order/registration?callback='+callback,
+                url : '/api/statement/update?callback='+callback,
                 data : JSON.stringify(orderInfo),
                 dataType : 'json',
                 contentType : 'application/json',
