--- a/src/main/resources/templates/order/order-management-form.html
+++ b/src/main/resources/templates/order/order-management-form.html
@@ -65,13 +65,36 @@
     </div>
     <div style="margin-top : 50px;">
         <div style="text-align: right;">
-            <input type="button" class="btn btn-primary" value="주문생성"/>
+            <input type="button" class="btn btn-primary" onclick="createOrderAll()" value="주문생성"/>
+            <script>
+                function createOrderAll(){
+                    let $checked = $('.checkbox-input:checked');
+                    let statementIdList = [];
+                    for (let i = 0; i < $checked.length; i++) {
+                        statementIdList.push($checked[i].value);
+                    }
+                    console.log(statementIdList);
+                    $.ajax({
+                        type : 'post',
+                        url : '/api/order/insert',
+                        data : JSON.stringify({statementIdList : statementIdList}),
+                        dataType : 'json',
+                        contentType: 'application/json',
+                        success : (result)=>{
+                            console.log(result);
+                            searchOrder();
+                            $('input:checked').prop('checked',false);
+                        },
+                        error : (err) =>console.log
+                    })
+                }
+            </script>
             <input type="button" class="btn btn-secondary" value="주문삭제"/>
         </div>
         <style>
             .container-table {
-                width: 1000px; /* 원하는 너비 */
-                height: 200px; /* 원하는 높이 */
+                min-width: 1000px; /* 원하는 너비 */
+                min-height: 200px; /* 원하는 높이 */
                 overflow-x: auto; /* 스크롤바 표시 */
             }
 
@@ -132,6 +155,7 @@
                     <th>배송예정일</th>
                     <th>납품번호</th>
                     <th>배송여부</th>
+                    <th>상태</th>
                 </tr>
                 </thead>
                 <tbody></tbody>
@@ -179,6 +203,7 @@
                 console.log(result);
                 let txt = '';
                 result.result.forEach((item, idx) => {
+                    const statementState = item.statementState;
                     let productCordList = item.productList;
                     let productCordSize = productCordList.length;
                     let modelCordTxt = '';
@@ -192,8 +217,8 @@
                         price += `<div>${productCord.supplyPrice}</div>`;
                     })
 
-                    txt += `<tr>`;
-                    txt += `<td><input class="form-check-input checkbox-input" type="checkbox"/></td>`
+                    txt += `<tr class="${statementState === '1' ? 'normal':'delete'}">`;
+                    txt += `<td><input value="${item.statementId}" name="check-statement" class="form-check-input checkbox-input" type="checkbox"/></td>`
                     txt += `<td><a href="/order/update?statementId=${item.statementId}" onclick="window.open(this.href , 'window_name' , 'width=1000,height=500,location=no,status=no,scrollbars=yes'); return false;">${item.statementId}</a></td>`;
                     txt += `<td>${item.orderId === null ? '미생성건' : item.orderId}</td>`;
                     txt += `<td>${item.salesNo}</td>`;
@@ -209,6 +234,7 @@
                     txt += `<td>배송예정일영역</td>`;
                     txt += `<td>납품번호영역</td>`;
                     txt += `<td>${item.orderState === null ? '' : item.orderState}</td>`;
+                    txt += `<td>${statementState === '1' ? '정상' : '삭제'}</td>`;
                     txt += `</tr>`;
                 })
                 $('tbody').empty().append(txt);
