전표를 없애야 하나 고민중...

--- a/src/main/resources/templates/delivery/delivery-management-form.html
+++ b/src/main/resources/templates/delivery/delivery-management-form.html
@@ -95,7 +95,7 @@
                     })
                 }
             </script>
-            <input th:onclick="deleteStatement()" type="button" class="btn btn-secondary" value="주문삭제"/>
+<!--            <input th:onclick="deleteStatement()" type="button" class="btn btn-secondary" value="주문삭제"/>-->
             <script>
                 function deleteStatement(){
 
